[package]
authors = ["Cristi Cobzarenco <cristi.cobzarenco@gmail.com>"]
name = "rethink"
version = "0.1.0"

[dependencies]
bufstream = "0.1.3"
byteorder = "1.1.0"
failure = "0.1.0"
failure_derive = "0.1.0"
log = "0.3.8"
quick-protobuf = "0.5.0"
serde = "1.0.21"
serde_derive = "1.0.21"
serde_json = "1.0.6"

[dependencies.ql2_proto]
path = "ql2_proto"

[dev-dependencies]
env_logger = "0.4.3"

[dependencies.arrayvec]
version = "0.4.6"
features = ["serde-1"]
