[package]
authors = ["Cristi Cobzarenco <cristi.cobzarenco@gmail.com>"]
name = "rethink"
version = "0.1.0"

[dependencies]
byteorder = "1.2.3"
log = "0.4.3"
serde = "1.0.70"
serde_derive = "1.0.70"
serde_json = "1.0.24"
failure = "0.1.1"
failure_derive = "0.1.1"
r2d2 = "0.8.2"

[dependencies.arrayvec]
version = "0.4.7"
features = ["serde-1"]

[dev-dependencies]
env_logger = "0.5.10"
